# OMClient

./: CMakeLists.txt  Config.cmake.in  README.md  main.cpp
.github/workflows/: build-test-install.yml  codeLint.yml
Examples/: CMakeLists.txt  allcodes.cpp  single.cpp
Examples/include/: single.hpp
Examples/qml/: allcodes.qml  single.qml
examples/: CMakeLists.txt  allcodes.cpp
examples/qml/: allcodes.qml
frag/: CodeIcons.frag  code0Am0.frag  code0Am1.frag  code1Am0.frag  code1Am1.frag  code2Am0.frag  code2Am1.frag  code3.frag
include/: omclient.hpp  omqml.hpp
qml/: CurrentWeather.qml  demo.qml
src/: omclient.cpp  omqml.cpp
